# nu_plugin_skim

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  release-plz.toml
.github/workflows/: release-please.yml
src/: bridge_cli_arguments.rs  cli_arguments.rs  command_collector.rs  command_context.rs  main.rs  nu_item.rs  predicate_based_selector.rs
