[package]
name = "nu_plugin_skim"
version = "0.1.1"
authors = ["Idan Arye <IdanArye@gmail.com>"]
edition = "2021"
description = "An `sk` command that can handle Nushell's structured data"
repository = "https://github.com/idanarye/nu_plugin_skim"
readme = "README.md"
keywords = ["nu", "plugin", "fuzzy", "menu", "util"]
categories = ["command-line-utilities", "development-tools", "value-formatting"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for local development, you can use a path dependency
# nu-plugin = { path = "../nushell/crates/nu-plugin" }
# nu-protocol = { path = "../nushell/crates/nu-protocol", features = ["plugin"] }
nu-plugin = "0.95"
nu-protocol = { version = "0.95", features = ["plugin"] }
nu-table = "0.95"
nu-color-config = "0.95"
skim = { version = "0.10", no_default_features = true }

[dev-dependencies]
# nu-plugin-test-support = { path = "../nushell/crates/nu-plugin-test-support" }
nu-plugin-test-support = { version = "0.95" }
