[package]
name = "nu_plugin_skim"
version = "0.24.0"
authors = ["Idan Arye <IdanArye@gmail.com>"]
edition = "2024"
description = "An `sk` command that can handle Nushell's structured data"
repository = "https://github.com/idanarye/nu_plugin_skim"
readme = "README.md"
keywords = ["nu", "plugin", "fuzzy", "menu", "util"]
categories = ["command-line-utilities", "development-tools", "value-formatting"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for local development, you can use a path dependency
# nu-plugin = { path = "../nushell/crates/nu-plugin" }
# nu-protocol = { path = "../nushell/crates/nu-protocol", features = ["plugin"] }
nu-plugin = "0.110"
nu-protocol = { version = "0.110", features = ["plugin"] }
#nu-table = "0.99"
skim = { version = "2", default-features = false, features = ["cli"] }
nu-color-config = "0.110"
clap = "4"
shlex = "1"
ratatui = "0.30"

# Use old version of interprocess because nu-plugin-core uses that version, but
# version 2.3.0 broke backward compatibility by removing
# `ListenerNonblockingMode` reexport from `interprocess::local_socket::traits`
# and Cargo thinks it's safe to upgrade to it because according to SemVer it
# should be.
interprocess = "2.2.3"

[dev-dependencies]
# nu-plugin-test-support = { path = "../nushell/crates/nu-plugin-test-support" }
nu-plugin-test-support = { version = "0.110" }
