[package]
name = "nu_plugin_skim"
version = "0.28.0"
authors = ["Idan Arye <IdanArye@gmail.com>"]
edition = "2024"
description = "An `sk` command that can handle Nushell's structured data"
repository = "https://github.com/idanarye/nu_plugin_skim"
readme = "README.md"
keywords = ["nu", "plugin", "fuzzy", "menu", "util"]
categories = ["command-line-utilities", "development-tools", "value-formatting"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for local development, you can use a path dependency
# nu-plugin = { path = "../nushell/crates/nu-plugin" }
# nu-protocol = { path = "../nushell/crates/nu-protocol", features = ["plugin"] }
nu-plugin = "0.113"
nu-protocol = { version = "0.113", features = ["plugin"] }
#nu-table = "0.99"
skim = { version = "4", default-features = false, features = ["cli"] }
nu-color-config = "0.113"
clap = "4"
shlex = "1"
ratatui = "0.30"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
